--- a/Client/src/app.scss
+++ b/Client/src/app.scss
@@ -1,9 +1,8 @@
-.appWrap {
-}
+@import "./common/baseStyle";
 
 body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif; 
-    color: #6fbed5;   
+    color: $baseColor;   
 }
