--- a/Client/src/component/About/index.scss
+++ b/Client/src/component/About/index.scss
@@ -1,7 +1,4 @@
+@import "../../common/baseStyle.scss";
+
 .AboutWrap {
-    position: relative;
-    top: 70px;
-    width: 1000px;
-    margin: auto;
-    box-sizing: border-box;
 }
