增加个人设置页面

--- a/Client/src/component/Header/index.scss
+++ b/Client/src/component/Header/index.scss
@@ -15,7 +15,7 @@
     box-sizing: border-box;
     height: 70px;
     width: 100%;
-    border-bottom: 1px solid #ebebeb;
+    border-bottom: 1px solid $borderColor;
 
     .logo {
         @include HeaderChild(left);
