--- a/Client/src/component/ArticleTmp/index.scss
+++ b/Client/src/component/ArticleTmp/index.scss
@@ -6,6 +6,7 @@
 
     .avatar {
         @extend .flexAlignCenter;
+        align-items: center;
         font-size: 14px;
         color: #8b8b8b;
         width: 100%;
@@ -41,5 +42,18 @@
         word-break: break-all;
         color: #8b8b8b;
         font-size: 16px;
+    }
+
+    .comment {
+        display: flex;
+        align-content: flex-start;
+        font-size: 12px;
+        color: #b4b4b4;
+        
+        svg {
+            color: #b4b4b4 !important;
+            width: 14px !important;
+            height: 14px !important;
+        }
     }
 }
