--- a/Client/src/component/ViewArticle/index.scss
+++ b/Client/src/component/ViewArticle/index.scss
@@ -12,6 +12,7 @@
     }
 
     img {
+        cursor: pointer;
         max-width: 500px !important;
     }
 
@@ -69,5 +70,52 @@
             word-break: break-all;
             color: #909090;
         }
+    }
+
+    .content {
+        min-height: 400px;
+    }
+
+    .likeWrap {
+        margin-top: 50px;
+        padding-bottom: 30px;
+        border-bottom: 1px dashed $borderColor;
+        color: $baseColor;
+        font-size: 16px;
+
+        & > :nth-child(1) {
+            display: flex;
+            align-items: center;
+            span {
+                margin-left: 8px
+            }
+        }
+
+        & > :nth-child(2) {
+            margin-top: 15px;
+            img {
+                margin-right: 10px;
+            }
+        }
+
+        svg {
+            width: 30px !important;
+            height: 30px !important;
+        }
+
+        .like {
+            color: $baseColor !important;
+        }
+
+        .normal {
+            color: #ccc !important;
+        }
+    }
+
+    .comment {
+    }
+
+    .commentBtnWrap {
+        text-align: right;
     }
 }
