增加阅读量功能, 以及修复评论BUG

--- a/Client/src/component/Header/index.scss
+++ b/Client/src/component/Header/index.scss
@@ -43,6 +43,8 @@
 
     .welcome {
         @include HeaderChild(right);
+        margin-right: 30px;
+        width: 90px;
         padding: 20px 0;
     }
 
