--- a/Client/src/component/ViewArticle/index.scss
+++ b/Client/src/component/ViewArticle/index.scss
@@ -29,6 +29,7 @@
             border-radius: 40px;
             margin-right: 15px;
         }
+        
     }
 
     .nickname {
@@ -40,6 +41,10 @@
     .date {
         font-size: 12px;
         color: #909090;
+
+        label {
+            margin: 10px 2px;
+        }
     }
 
     .title {
