--- a/Client/src/component/ArticleTmp/index.scss
+++ b/Client/src/component/ArticleTmp/index.scss
@@ -13,7 +13,8 @@
         width: 100%;
 
         & > :nth-child(1) {
-            margin: -10px 10px 0 0 !important;
+            margin-right: 10px!important;
+            padding: 0px !important;
         }
 
         img {
@@ -60,6 +61,7 @@
         }
         
         svg {
+            cursor: default;
             color: #b4b4b4 !important;
             width: 14px !important;
             height: 14px !important;
