--- a/Client/src/component/ViewArticle/index.scss
+++ b/Client/src/component/ViewArticle/index.scss
@@ -49,7 +49,7 @@
 
     .title {
         text-align: center;
-        margin: 30px 0;
+        margin: 30px 0 10px;
         font-family: -apple-system,PingFang SC,Hiragino Sans GB,Arial,Microsoft YaHei,Helvetica Neue,sans-serif;
     }
 
@@ -117,7 +117,9 @@
         }
     }
 
-    .comment {
+    .action {
+        display: flex;
+        justify-content: flex-end;
     }
 
     .commentBtnWrap {
