--- a/Client/src/component/Index/index.scss
+++ b/Client/src/component/Index/index.scss
@@ -40,7 +40,7 @@
     }
 
     .other {
-        margin-top: 30px;
+        margin-top: 20px;
         img {
             display: block;
             height: 160px;
@@ -65,6 +65,7 @@
         @extend .indexOtherList;
 
         & > :nth-child(2) {
+            display: flex;
             margin: 10px 0 0 15px;
         }
     }
