--- a/Client/src/component/Articles/index.scss
+++ b/Client/src/component/Articles/index.scss
@@ -14,9 +14,16 @@
         }
     }
 
-    h1 {
+    .title {
         margin: -10px 0 30px;
-        font-weight: 400;
+        label {
+            font-size: 20px;
+        }
+        input {
+            font-size: 30px !important;
+            font-weight: 400;
+            padding-bottom: 6px !important;
+        }
         & > div {
             font-size: 28px !important;
             width: 800px !important;
