--- a/Client/src/component/App/index.scss
+++ b/Client/src/component/App/index.scss
@@ -3,10 +3,16 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif; 
+    font-family: cursive; 
     color: $baseColor;
 }
 
 svg, a {
     cursor: pointer;
+}
+
+canvas {
+    top: 0px;
+    position: absolute !important;
+    z-index: -1 !important;
 }
