--- a/Client/src/component/Index/index.scss
+++ b/Client/src/component/Index/index.scss
@@ -1,16 +1,24 @@
 @import "../../common/baseStyle.scss";
 
 .IndexWrap {
+    min-height: 800px;
 
     section {
-        padding: 10px 0 0 50px;
         min-height: 700px;
         transition: all 1s ease-in-out;
     }
 
     .progress {
-        margin: 200px 430px;
+        margin: 200px 350px;
         width: 200px !important;
+    }
+
+    .progressWrap {
+        position: absolute;
+        z-index: 100px;
+        background-color: rgba($color: #ccc, $alpha: 0.1);
+        width: 100%;
+        height: 100%;
     }
 
     .indexArticles {
@@ -21,10 +29,15 @@
         }
     }
 
-    .articlesList {
+    .articlesListWrap {
+        position: relative;
         box-sizing: border-box;
         width: 650px;
         margin-right: 30px;
+    }
+
+    .articlesList {
+        padding: 10px 0 0 50px;
     }
 
     .search {
@@ -40,6 +53,8 @@
     }
 
     .other {
+        margin-top: 10px;
+
         img {
             display: block;
             height: 160px;
@@ -66,6 +81,10 @@
         & > :nth-child(2) {
             display: flex;
             margin: 10px 0 0 15px;
+        }
+
+        a {
+            margin-right: 6px;
         }
     }
 }
