解决图片过大加载缓慢问题

--- a/Client/src/component/Articles/index.scss
+++ b/Client/src/component/Articles/index.scss
@@ -56,5 +56,9 @@
         & > :nth-child(2) {
             word-break: break-all;
         }
+
+        img {
+            max-width:400px !important; 
+        }
     }
 }
