--- a/Client/src/component/ArticleTmp/index.scss
+++ b/Client/src/component/ArticleTmp/index.scss
@@ -75,7 +75,7 @@
         img {
             margin-left: 10px;
             width: 150px !important;
-            height: 120px !important;
+            max-height: 120px !important;
         }
     }
 }
