增加文章种类

--- a/Client/src/component/ArticleTmp/index.scss
+++ b/Client/src/component/ArticleTmp/index.scss
@@ -2,7 +2,7 @@
 
 .ArticleTmpWrap {
     padding: 20px 0 10px;
-    border-bottom: 1px solid $borderColor;
+    border-top: 1px solid $borderColor;
 
     .avatar {
         position: relative;
