--- a/Client/src/component/Articles/index.scss
+++ b/Client/src/component/Articles/index.scss
@@ -15,7 +15,7 @@
     }
 
     .title {
-        margin: -10px 0 30px;
+        margin: -10px 0 10px;
         label {
             font-size: 20px;
         }
@@ -59,6 +59,16 @@
 
         img {
             max-width:400px !important; 
+        }
+    }
+
+    .chipSelect {
+        @extend .flexAlignCenter;
+        margin-bottom: 30px;
+
+        label {
+            margin-right: 20px;
+            color: rgba(0, 0, 0, 0.3);
         }
     }
 }
