--- a/Client/src/component/Articles/index.scss
+++ b/Client/src/component/Articles/index.scss
@@ -71,4 +71,9 @@
             color: rgba(0, 0, 0, 0.3);
         }
     }
+
+    .breakAll {
+        overflow: scroll;
+        word-break: break-all;
+    }
 }
