--- a/Client/src/component/ArticleTmp/index.scss
+++ b/Client/src/component/ArticleTmp/index.scss
@@ -33,6 +33,10 @@
         cursor: pointer !important;
     }
 
+    .date {
+        font-size: 12px;
+    }
+
     .title {
         display: block;
         color: #969696;
