--- a/Client/src/component/ArticleTmp/index.scss
+++ b/Client/src/component/ArticleTmp/index.scss
@@ -3,6 +3,7 @@
 .ArticleTmpWrap {
     padding: 10px 0 10px;
     border-top: 1px solid $borderColor;
+    animation: displayArticleTmpWrap 0.6s;
 
     .avatar {
         position: relative;
@@ -89,4 +90,9 @@
         border-radius: 2px;
         padding: 0 6px;
     }
+}
+
+@keyframes displayArticleTmpWrap { 
+    0% { transform: translateY(-50px); } 
+    100% { transform: translateY(0px); } 
 }
