--- a/Client/src/component/Footer/index.scss
+++ b/Client/src/component/Footer/index.scss
@@ -1,6 +1,41 @@
-@import "../../common/baseStyle.scss";
+@import "../../common/baseStyle";
 
 .FooterWrap {
+    width: 100%;
+    margin: 100px auto 30px;
+    color: $baseColor;
+
+    .baseline {
+        @extend .flexAlignCenter;
+        position: relative;
+        justify-content: center;
+        text-align: center;
+        padding-top: 15px;
+        border-top: 2px solid $baseColor;
+        animation: displayBaseline 20s infinite;
+
+        &:hover {
+            .bigBottomLogo {
+                visibility: visible;
+            }
+        }
+    }
+
+    .bottomLogo {
+        cursor: pointer;
+        margin-right: 10px;
+    }
+
+    .bigBottomLogo {
+        @extend .flexAlignCenter;
+        visibility: hidden;
+        position: absolute;
+        top: -160px;
+        font-size: 24px;
+        background-color: rgba($color: #000000, $alpha: 0.4);
+        padding: 20px 40px;
+        border-radius: 6px;
+    }
 }
 
 .loginLogo {
@@ -17,4 +52,19 @@
 @keyframes displayLoginLogo { 
     0% { transform: translateY(-200px); } 
     100% { transform: translateY(0px); } 
+}
+
+@keyframes displayBaseline { 
+    0% {
+        margin: 100px auto 30px;
+        width: 500px;
+    }
+    40% {
+        margin: 100px auto 30px;
+        width: 800px;
+    }
+    100% {
+        margin: 100px auto 30px;
+        width: 100%;
+    } 
 }
