--- a/Client/src/component/ArticleTmp/index.scss
+++ b/Client/src/component/ArticleTmp/index.scss
@@ -4,6 +4,7 @@
     padding: 10px 0 10px;
     border-top: 1px solid $borderColor;
     animation: displayArticleTmpWrap 0.6s;
+    opacity: 1;
 
     .avatar {
         position: relative;
@@ -93,6 +94,6 @@
 }
 
 @keyframes displayArticleTmpWrap { 
-    0% { transform: translateY(-50px); } 
-    100% { transform: translateY(0px); } 
+    0% { transform: translateY(-50px); opacity: 0}
+    100% { transform: translateY(0px);  opacity: 1} 
 }
