--- a/Client/src/component/Articles/index.scss
+++ b/Client/src/component/Articles/index.scss
@@ -17,6 +17,7 @@
     .title {
         margin: -10px 0 10px;
         label {
+            display: inline-block;
             font-size: 20px;
         }
         input {
