--- a/Client/src/component/Chips/index.scss
+++ b/Client/src/component/Chips/index.scss
@@ -1,6 +1,7 @@
 @import "../../common/baseStyle";
 
 .ChipsWrap {
+    width: 650px;
     padding: 30px 0 0 50px;
 
     .chipsList {
@@ -22,8 +23,10 @@
         }
 
         .chipLabel {
+            transition: all .2s ease-in;
             &:hover {
-                animation: displayChipLabel 1s;   
+                transform: translate(5px);
+                text-decoration: underline;   
             }
         }
     }
@@ -36,11 +39,4 @@
         display: flex;
         justify-content: flex-end;
     }
-}
-
-@keyframes displayChipLabel { 
-    0% { transform: translateX(0px); } 
-    20% { transform: translateX(7px); }
-    30% { transform: translateX(10px); } 
-    100% { transform: translateX(0px); } 
 }
