--- a/Client/src/component/Footer/index.scss
+++ b/Client/src/component/Footer/index.scss
@@ -2,7 +2,7 @@
 
 .FooterWrap {
     width: 100%;
-    margin: 100px auto 30px;
+    margin: 30px auto;
     color: $baseColor;
 
     .baseline {
@@ -12,7 +12,6 @@
         text-align: center;
         padding-top: 15px;
         border-top: 2px solid $baseColor;
-        animation: displayBaseline 20s infinite;
 
         &:hover {
             .bigBottomLogo {
@@ -22,18 +21,22 @@
     }
 
     .bottomLogo {
+        @extend .flexAlignCenter;
         cursor: pointer;
         margin-right: 10px;
     }
 
     .bigBottomLogo {
         @extend .flexAlignCenter;
+        justify-content: center;
         visibility: hidden;
+        width: 500px;
+        height: 168px;
+        overflow: hidden;
         position: absolute;
         top: -160px;
         font-size: 24px;
         background-color: rgba($color: #000000, $alpha: 0.4);
-        padding: 20px 40px;
         border-radius: 6px;
     }
 }
@@ -52,19 +55,4 @@
 @keyframes displayLoginLogo { 
     0% { transform: translateY(-200px); } 
     100% { transform: translateY(0px); } 
-}
-
-@keyframes displayBaseline { 
-    0% {
-        margin: 100px auto 30px;
-        width: 500px;
-    }
-    40% {
-        margin: 100px auto 30px;
-        width: 800px;
-    }
-    100% {
-        margin: 100px auto 30px;
-        width: 100%;
-    } 
 }
