--- a/Client/src/component/Header/index.scss
+++ b/Client/src/component/Header/index.scss
@@ -8,12 +8,13 @@
 }
 
 .HeaderWrap {
-    position: fixed;
-    z-index: 10;
+    position: sticky;
+    top: -15px;
+    z-index: 200;
     background-color: #fff;
     overflow: hidden;
     box-sizing: border-box;
-    height: 70px;
+    height: 80px;
     width: 100%;
     border-bottom: 1px solid $borderColor;
 
