--- a/Client/src/component/ArticleTmp/index.scss
+++ b/Client/src/component/ArticleTmp/index.scss
@@ -1,7 +1,7 @@
 @import "../../common/baseStyle";
 
 .ArticleTmpWrap {
-    padding: 10px 0 10px;
+    padding: 20px 0 10px;
     border-top: 1px solid $borderColor;
     animation: displayArticleTmpWrap 0.6s;
     opacity: 1;
@@ -53,6 +53,7 @@
         word-break: break-all;
         color: #8b8b8b;
         font-size: 16px;
+        line-height: 22px;
         margin: 0 0 10px;
     }
 
