--- a/Client/src/component/Articles/index.scss
+++ b/Client/src/component/Articles/index.scss
@@ -21,13 +21,13 @@
             font-size: 20px;
         }
         input {
-            font-size: 30px !important;
-            font-weight: 400;
+            font-size: 28px !important;
+            font-weight: 300;
             padding-bottom: 6px !important;
         }
         & > div {
             font-size: 28px !important;
-            width: 800px !important;
+            width: 600px !important;
         }
     }
 
@@ -66,11 +66,12 @@
     .chipSelect {
         @extend .flexAlignCenter;
         margin-bottom: 30px;
+    }
 
-        label {
-            margin-right: 20px;
-            color: rgba(0, 0, 0, 0.3);
-        }
+    .articlesLabel {
+        font-size: 20px;
+        margin-right: 20px;
+        color: rgba(0, 0, 0, 0.3);
     }
 
     .breakAll {
