Awkward Article 2.0 ~~~~~ happy git add .

--- a/Client/src/common/baseStyle.scss
+++ b/Client/src/common/baseStyle.scss
@@ -1,6 +1,7 @@
-$baseColor: #6fbed5;
-$borderColor: #ebebeb;
-$articleBgc: rgba(244, 245, 245, 0.1);
+$baseColor: rgba(0,0,0,.6);
+$borderColor: rgba(0,0,0,.0785);
+$articleBgc: #fff;
+$fontFamily: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
 
 .container {
     position: relative;
