--- a/Client/src/common/baseStyle.scss
+++ b/Client/src/common/baseStyle.scss
@@ -1,5 +1,6 @@
 $baseColor: rgba(0,0,0,.6);
 $borderColor: rgba(0,0,0,.0785);
+$highlightColor: #55bed5;
 $articleBgc: #fff;
 $fontFamily: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
 
