--- a/Client/src/component/ArticleTmp/index.scss
+++ b/Client/src/component/ArticleTmp/index.scss
@@ -1,7 +1,7 @@
 @import "../../common/baseStyle";
 
 .ArticleTmpWrap {
-    padding: 20px 0 10px;
+    padding: 30px 0;
     border-top: 1px solid $borderColor;
     animation: displayArticleTmpWrap 0.5s;
     opacity: 1;
@@ -42,7 +42,7 @@
     .title {
         display: block;
         color: #969696;
-        font-size: 24px;
+        font-size: 20px;
         font-weight: 600;
     }
 
