--- a/Client/src/component/Home/index.scss
+++ b/Client/src/component/Home/index.scss
@@ -41,13 +41,19 @@
             font-size: 16px;
             color: #8b8b8b;
 
-            img, svg {
-                width: 26px;
-                height: 26px;
-                color: $highlightColor !important;
+            img {
                 margin: 0 4px;
+                width: 22px;
+                height: 22px;
                 border-radius: 0px;
             }
+
+            svg {
+                width: 26px !important;
+                height: 26px !important;
+                color: $highlightColor !important;
+            }
+
         }
 
         .selfIntroduction {
@@ -73,13 +79,17 @@
         padding: 0 25px;
         background-color: $articleBgc;
 
-        .header {
+        .articleHeader {
             width: 100%;
             height: 60px;
             line-height: 60px;
             border-bottom: 1px solid $borderColor;
             font-weight: 600;
             color: #2b445d;
+        }
+
+        .articleFolder {
+            @extend .flexAlignCenter;
         }
     }
 }
