--- a/Client/src/component/ViewArticle/index.scss
+++ b/Client/src/component/ViewArticle/index.scss
@@ -73,6 +73,7 @@
 
     .content {
         min-height: 400px;
+        word-break: break-all;
     }
 
     .likeWrap {
@@ -119,6 +120,16 @@
         display: block;
         width: 100%;
         overflow: scroll;
+    }
+
+    .categoryWrap {
+        @extend .flexAlignCenter;
+        color: $baseColor;
+
+        a {
+            padding: 4px 10px;
+            border-radius: 4px;
+        }
     }
 }
 
