--- a/Client/src/component/FolderTmp/index.scss
+++ b/Client/src/component/FolderTmp/index.scss
@@ -1,7 +1,8 @@
 @import "../../common/baseStyle";
 
 .folderItem {
-    margin: 0 4px;
+    display: inline-block;
+    margin: 0 4px 4px;
     padding: 4px 10px;
     border: 1px solid $baseColor;
     height: 22px;
